# ai-native-opportunities

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml  sources.example.json  sources.json
apps/api/app/: __init__.py  application_agent.py  config.py  db.py  ingestion.py  main.py  matching.py  models.py  resume_parser.py  schemas.py  scoring.py  security.py  storage.py
apps/api/tests/: test_resume_parser.py  test_scoring.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/applications/[id]/: page.tsx
apps/web/app/matches/[id]/: page.tsx
apps/web/app/opportunities/: page.tsx
apps/web/app/opportunities/[id]/: page.tsx
apps/web/components/: application-actions.tsx  application-tracker.tsx  dashboard-actions.tsx  manual-opportunity-importer.tsx  opportunity-match-panel.tsx  reddit-importer.tsx  resume-matcher.tsx  ui.tsx
apps/web/lib/: api.ts  format.ts  types.ts
infra/db/: init.sql
