[project]
name = "ai-native-opportunities-api"
version = "0.1.0"
description = "FastAPI backend for AI-native opportunity discovery and resume matching."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pgvector>=0.3.5",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "PyJWT[crypto]>=2.9.0",
  "pypdf>=5.0.1",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.35",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
